# rust-chess-engine

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
git-hooks/: README  pre-commit
src/: lib.rs  main.rs
src/benches/: move_generator_bench.rs  search_bench.rs
src/demo/: chess_agent.rs  cmdline_game.rs  mod.rs
src/model/: attack_trace.rs  attack_trace_tests.rs  evaluator.rs  game_state.rs  game_state_tests.rs  mod.rs  move_generator.rs  move_generator_tests.rs  position_tests.rs  zobrist_hash.rs
src/model/tests/: attack_trace_tests.rs  game_state_tests.rs  mod.rs  move_generator_tests.rs  move_sequence_tests.rs  position_tests.rs  zobrist_hash_tests.rs
src/search/: minimax_search.rs  mod.rs  test_utils.rs  transposition_table.rs
src/search/tests/: checkmate_tests.rs  mod.rs  negamax_tests.rs  utils.rs
src/uci/: mod.rs  uci_utils.rs
