[package]
name = "rust-chess"
version = "0.1.0"
authors = ["Jiri Hartikka <jiri.hartikka@gmail.com>"]
edition = "2018"
rust = "1.51.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.1"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
path = "src/benches/search_bench.rs"
name = "search_bench"
harness = false

[[bench]]
path = "src/benches/move_generator_bench.rs"
name = "move_generator"
harness = false